doc GET for phone and customers
